--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ node_modules
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
+.idea/**/vcs.xml
 .idea/dictionaries
 
 # Sensitive or high-churn files:
