minor fixes on logging

--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,13 @@
 mqtt:
-  host: "192.168.1.39"
+  host: 192.168.1.39
   port: 1883
 #  doors: ["Garage1", "Garage2"]
   prefix: "garadget"
 http:
-  host: localhost
+  host: 192.168.1.37
   port: 8081
 application:
-  logLevel: "info"
+  logLevel: info
+  logLevelHttp: error
 ssdp:
-   enabled: false
+  enabled: false
