--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,10 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/windows,intellij
+.idea/.name
+.idea/Garadget-mqtt.iml
+.idea/misc.xml
+.idea/modules.xml
+
+.vs/slnx.sqlite
+.vs/mqtt2rest/v15/.suo
